Updated post function, add file reader test